# RDGE

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt  formatting.txt  rdge.sh  readme.md
cmake/: FindGLEW.cmake  FindSDL2.cmake  version.hpp.tmpl
doc/: Doxyfile
examples/glpong/: CMakeLists.txt
examples/glpong/res/textures/: chrono.json
examples/glpong/src/: glpong.cpp  glpong.hpp  main.cpp
examples/glpong/src/scenes/: chronoscene.cpp  chronoscene.hpp  introscene.cpp  introscene.hpp
examples/gui/: CMakeLists.txt
examples/gui/res/shaders/: basic.frag
examples/gui/res/textures/: button.json
examples/gui/src/: gui.cpp  gui.hpp  main.cpp
examples/gui/src/scenes/: guiscene.cpp  guiscene.hpp
examples/pong/: CMakeLists.txt
examples/pong/src/: game.cpp  game.hpp  main.cpp
examples/pong/src/scenes/intro/: introscene.cpp  introscene.hpp
examples/pong/src/scenes/menu/: menuscene.cpp  menuscene.hpp
examples/pong/src/scenes/pong/: pongscene.cpp  pongscene.hpp
examples/pong/src/scenes/pong/entities/: ball.cpp  ball.hpp  net.cpp  net.hpp  paddles.cpp  paddles.hpp  scoreboard.cpp  scoreboard.hpp
examples/pong/src/scenes/settings/: settingsscene.cpp  settingsscene.hpp
include/rdge/: application.hpp  assets.hpp  color.hpp  config.hpp  core.hpp  cursor.hpp  debug.hpp  font.hpp  gameobjects.hpp  glwindow.hpp  graphics.hpp  math.hpp  physics.hpp  random.hpp  surface.hpp  system.hpp  texture.hpp  type_traits.hpp  types.hpp  util.hpp  viewport.hpp  window.hpp
lib/: nlohmann  nothings
lib/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_rdge.cpp  imgui_impl_rdge.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
lib/nlohmann/: json.hpp
lib/nothings/: stb_image.h  stb_truetype.h
lib/tinyheaders/: tinyfiles.h
sandbox/chrono/: CMakeLists.txt
sandbox/chrono/include/chrono/: asset_table.hpp  events.hpp  globals.hpp  import.hpp  types.hpp
sandbox/chrono/include/chrono/entities/: iactor.hpp  player.hpp  sign.hpp  static_actor.hpp
sandbox/chrono/include/chrono/entities/npcs/: debutante.hpp
sandbox/chrono/include/chrono/scenes/: overworld.hpp  scene_manager.hpp  winery.hpp
sandbox/chrono/include/chrono/scenes/util/: contact_handler.hpp
sandbox/chrono/include/chrono/util/: tilemap_helpers.hpp
sandbox/chrono/res/: export.json
sandbox/chrono/res/animations/: animals.json  animals.tps  npcs.json  npcs.tps  player.json  player.tps
sandbox/chrono/res/fonts/bitpotion/: bitpotion.fnt  bitpotion.hiero
sandbox/chrono/res/objects/: indoors_obj.tps  indoors_obj.tsx  overworld_houses.tps  overworld_houses.tsx  overworld_obj.tps  overworld_obj.tsx
sandbox/chrono/res/objects/indoors/: indoors_obj.tsx
sandbox/chrono/res/objects/overworld/: overworld_obj.json  overworld_obj.tsx
sandbox/chrono/res/spritesheets/: enemies.json  environment.json  player.json
sandbox/chrono/res/templates/: overworld_obj.tgx
sandbox/chrono/res/tilemaps/: crossroads.json  objecttypes.json  overworld.json  overworld.tmx  tess_house.tmx  winery.tmx
sandbox/chrono/res/tilesets/: indoors.tsx  overworld_bg.json  overworld_bg.tsx
sandbox/chrono/res/ui/: dialog.json
sandbox/chrono/res/ui/in_game/dialog/: data.json
sandbox/chrono/src/: asset_enums.hpp  asset_table.hpp  chrono.hpp  events.cpp  globals.hpp  import.cpp  main.cpp
sandbox/chrono/src/entities/: iactor.cpp  player.cpp  sign.cpp  static_actor.cpp
sandbox/chrono/src/entities/npcs/: debutante.cpp
sandbox/chrono/src/scenes/: contact_handler.cpp  contact_handler.hpp  macros.hpp  overworld.cpp  overworld.hpp  scene_manager.cpp  test.cpp  test.hpp  winery.cpp  winery.hpp
sandbox/chrono/src/scenes/entities/: cardinal_direction_animation.hpp  dove.cpp  dove.hpp  duck.cpp  duck.hpp  player.cpp  player.hpp
sandbox/chrono/src/scenes/util/: contact_handler.cpp
sandbox/chrono/src/util/: tilemap_helpers.cpp
sandbox/physics/: CMakeLists.txt
sandbox/physics/src/: main.cpp
sandbox/physics/src/scenes/: revolute.cpp  revolute.hpp  test.cpp  test.hpp  tiles.cpp  tiles.hpp  tumbler.cpp  tumbler.hpp
scripts/: asset_pipeline.py  rwops.py
scripts/cli_wrappers/: aseprite.py  tiled.py
scripts/cooker/: export_all.py  export_animation.py  export_common.py  export_font.py  export_objectsheet.py  export_tilemap.py  export_tileset.py
scripts/cookers/: animation_chef.py  objectsheet_chef.py  tilemap_chef.py
scripts/exporters/: npcs.py
scripts/image_exporter/: run.py
scripts/utils/: rwops.py
src/: application.cpp  color.cpp  config.cpp  cursor.cpp  font.cpp  glwindow.cpp  random.cpp  surface.cpp  texture.cpp  viewport.cpp  window.cpp
src/assets/: asset_pack.cpp  bitmap_font.cpp  bmfont.cpp  font.cpp  game_settings.cpp  (+6 more)
tests/: color.cpp  dummy_window.hpp  gtest_template.cpp  main.cpp  rdge_math.cpp  rdge_util.cpp
tools/asset_packer/: CMakeLists.txt
tools/asset_packer/src/: common.hpp  flags.h  import_fonts.cpp  import_images.cpp  import_spritesheets.cpp  import_tilemaps.cpp  import_tilesets.cpp  main.cpp
tutorials/01_hello_rect/: CMakeLists.txt
tutorials/01_hello_rect/src/: main.cpp
tutorials/01_textures/: CMakeLists.txt
tutorials/01_textures/src/: main.cpp
tutorials/02_layers/: CMakeLists.txt
tutorials/02_layers/src/: main.cpp
tutorials/03_spritesheet/: CMakeLists.txt
tutorials/03_spritesheet/res/: spritesheet_stall.json
tutorials/03_spritesheet/src/: main.cpp
tutorials/04_scenes/: CMakeLists.txt
tutorials/04_scenes/src/: main.cpp  shooting_gallery_scene.cpp  shooting_gallery_scene.hpp
tutorials/opengl/ex01_triangle/: CMakeLists.txt
tutorials/opengl/ex01_triangle/res/: basic.frag  config.json
tutorials/opengl/ex01_triangle/src/: basic.frag  basic.vert  ex01_triangle.cpp
tutorials/sandbox/: CMakeLists.txt
tutorials/sandbox/res/: enemies.json  environment.json  player.json
tutorials/sandbox/src/: displacement.hpp  main.cpp
tutorials/sandbox/src/scenes/: test.cpp  test.hpp
tutorials/sandbox/src/scenes/entities/: duck.hpp  player.cpp  player.hpp
(+315 files in other folders)
